2019-07-18 11:14 +0000  Asterisk Development Team <asteriskteam@digium.com>

	* asterisk 16.5.0-rc1 Released.

2019-07-18 06:07 +0000 [cb831a18d1]  Asterisk Development Team <asteriskteam@digium.com>

	* Update CHANGES and UPGRADE.txt for 16.5.0
2019-07-14 13:26 +0000 [1756029237]  Joshua Colp <jcolp@digium.com>

	* res_rtp_asterisk: Move where DTLS MTU variable is defined.

	  The DTLS MTU variable is not dependent on pjproject and should
	  not exist in its block.

	  Change-Id: I7e97d64dc192f2ac81bfe2b72b8229d321c7d026

2019-06-12 13:03 +0000 [2126dc3021]  George Joseph <gjoseph@digium.com>

	* res_pjsip_messaging:  Check for body in in-dialog message

	  We now check that a body exists and it has a length > 0 before
	  attempting to process it.

	  ASTERISK-28447
	  Reported-by: Gil Richard

	  Change-Id: Ic469544b22ab848734636588d4c93426cc6f4b1f

2019-06-28 11:15 +0000 [6c59df17a5]  Francesco Castellano <francesco.castellano@messagenet.it>

	* chan_sip: Handle invalid SDP answer to T.38 re-invite

	  The chan_sip module performs a T.38 re-invite using a single media
	  stream of udptl, and expects the SDP answer to be the same.

	  If an SDP answer is received instead that contains an additional
	  media stream with no joint codec a crash will occur as the code
	  assumes that at least one joint codec will exist in this
	  scenario.

	  This change removes this assumption.

	  ASTERISK-28465

	  Change-Id: I8b02845b53344c6babe867a3f0a5231045c7ac87

2019-07-01 16:57 +0000 [da1db4f842]  Chris-Savinovich <csavinovich@digium.com>

	* chan_dahdi.c: crash in chan_dahdi

	  Fixes a crash in chan_dahdi occurring on 32-bit systems. A previous
	  patch introduced a variable of type unassigned long long which is 64-bits.
	  Casting it as 'ast_json_int_t' along with JSON type 'I' makes it work
	  with 32-bit systems.

	  ASTERISK-28457

	  Change-Id: I9cef6b5f2d826fc5c93f2f6a1c997c4e3e6c93fe

2019-07-01 10:49 +0000 [83aba363fe]  Kevin Harwell <kharwell@digium.com>
