@@ -1,3 +1,7 @@
+2019-07-25 09:38 +0000  Asterisk Development Team <asteriskteam@digium.com>
+
+	* asterisk 16.5.0 Released.
+
 2019-07-18 11:14 +0000  Asterisk Development Team <asteriskteam@digium.com>
 
 	* asterisk 16.5.0-rc1 Released.
